2002-09-30  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Don't define mkdir here.

2002-09-25  Mumit Khan  <khan@nanotech.wisc.edu>
 
 	* aclocal.m4 (OCTAVE_MKDIR_TAKES_ONE_ARG): New macro to determine if
 	host mkdir accepts only one arg instead of the usual two.
 	* configure.in: Use. Check for direct.h.
 	(mkdir): Define.
 
2002-09-26  Paul Kienzle <pkienzle@users.sf.net>

	* configure.in: Check for conio.h.
	Check for _kbhit.

2002-09-26  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (AH_BOTTOM): Don't define
	USE_PRAGMA_INTERFACE_IMPLEMENTATION.

2002-09-26  Paul Kienzle <pkienzle@users.sf.net>

	* configure.in: Fix syntax errors in !HAVE_XXX_T.
	Don't require terminal control for build.

2002-09-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Fix typedefs used in AH_BOTTOM.

2002-09-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (AH_BOTTOM): If using g++, define
	USE_PRAGMA_INTERFACE_IMPLEMENTATION.

2002-08-17  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Check for sstream.

2002-08-16  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (%.d : %.cc): Add $*.df to LHS of dependency list.

2002-08-15  Paul Kienzle <pkienzle@users.sf.net>

	* mk-opts.pl: Add support for INCLUDE = "...".

2002-08-15  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mk-opts.pl: Handle Array<int> too.

2002-08-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mk-opts.pl (emit_options_function): Emit newline at EOF.

2002-08-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in: Use $@-t instead of $@.tmp or $@.t.

2002-07-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mk-opts.pl: New file.
	* Makefile.in (DISTFILES): Add it to the list.

2002-07-12  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (AC_CONFIG_FILES): Add libcruft/dasrt/Makefile to
	the list.

2002-07-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (AC_CONFIG_FILES): Add libcruft/odessa/Makefile to
	the list.
