@@ -22,7 +22,7 @@ dnl Copyright (C) 1996, 1997 John W. Eaton
 ### 02111-1307, USA. 
 
 AC_INIT
-AC_REVISION($Revision: 1.370 $)
+AC_REVISION($Revision: 1.371 $)
 AC_PREREQ(2.52)
 AC_CONFIG_SRCDIR([src/octave.cc])
 AC_CONFIG_HEADER(config.h)
@@ -1122,6 +1122,8 @@ AC_SUBST_FILE(bsd_gcc_kluge_targets_frag)
 
 ### Checks for other programs used for building, testing, installing,
 ### and running Octave.
+
+OCTAVE_PROG_SED
 
 OCTAVE_PROG_FLEX
 OCTAVE_PROG_BISON
