@@ -252,6 +252,10 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #define OCTAVE_CONF_RUNTEST %OCTAVE_CONF_RUNTEST%
 #endif
 
+#ifndef OCTAVE_CONF_SED
+#define OCTAVE_CONF_SED %OCTAVE_CONF_SED%
+#endif
+
 #ifndef OCTAVE_CONF_SHARED_LIBS
 #define OCTAVE_CONF_SHARED_LIBS %OCTAVE_CONF_SHARED_LIBS%
 #endif
