@@ -702,6 +702,7 @@ specified option.\n\
   m ["RDYNAMIC_FLAG"] = OCTAVE_CONF_RDYNAMIC_FLAG;
   m ["RLD_FLAG"] = OCTAVE_CONF_RLD_FLAG;
   m ["RUNTEST"] = OCTAVE_CONF_RUNTEST;
+  m ["SED"] = OCTAVE_CONF_SED;
   m ["SHARED_LIBS"] = OCTAVE_CONF_SHARED_LIBS;
   m ["SHLEXT"] = OCTAVE_CONF_SHLEXT;
   m ["SHLEXT_VER"] = OCTAVE_CONF_SHLEXT_VER;
